# water

./: pyproject.toml
cookbook/agents/: agent_task_flow.py  benchmark_flow.py  conversation_flow.py  eval_cli_flow.py  eval_flow.py  fallback_chain_flow.py  guardrail_retry_flow.py  planner_flow.py  prompt_template_flow.py  structured_output_flow.py
cookbook/core/: debug_flow.py
cookbook/integrations/: agno_flow.py
cookbook/real_world/: claude_code_agent.py
cookbook/storage/: storage_backends_flow.py
tests/: test_agent_task.py  test_bench.py  test_constructor_validation.py  test_conversation.py  test_debugger.py  test_fallback_chain.py  test_flow_cache.py  test_guardrail_retry.py  test_memory_bounds.py  test_react.py  test_sandbox.py  test_sandbox_security.py  test_structured_output.py  test_timeouts.py
water/: __init__.py
water/agents/: __init__.py  approval.py  batch.py  conversation.py  fallback.py  human.py  llm.py  memory.py  react.py  sandbox.py  streaming.py  structured.py  tools.py
water/bench/: __init__.py  base.py  instruction.py  tool_use.py
water/core/: engine.py  flow.py  replay.py  task.py
water/debug/: __init__.py  debugger.py
water/integrations/: a2a.py  mcp.py  streaming.py
water/middleware/: events.py
water/observability/: auto_instrument.py  logging.py  telemetry.py
water/resilience/: cache.py  circuit_breaker.py  flow_cache.py
water/server/: app.py
water/storage/: base.py  postgres.py  redis.py
water/tasks/: io.py  notify.py
water/utils/: cli.py  scheduler.py
water/utils/deploy/: docker.py  fly.py  railway.py
