[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-ai"
version = "0.1.3"
description = "The production-ready agent harness framework for Python"
authors = [
    {name = "Manthan Gupta", email = "manthangupta109@gmail.com"}
]
keywords = [
  "water-ai",
  "agent-harness",
  "harness-engineering",
  "multi-agent",
  "orchestration",
  "llm",
  "large-language-model",
  "agents",
  "ai-agents",
  "workflow",
  "pipeline",
  "mcp",
  "model-context-protocol",
  "langchain",
  "crewai",
  "agno",
  "autogen",
  "async",
  "agent-framework",
  "multi-agent-systems",
  "approval-gates",
  "sandboxing",
  "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
water = "water.utils.cli:main"

[project.urls]
Homepage = "https://github.com/manthanguptaa/water"
Repository = "https://github.com/manthanguptaa/water"

[tool.setuptools.packages.find]
where = ["."]
include = ["water*"]
exclude = ["tests*", "cookbook*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]